<resources>
    <string name="app_name">NYTimes</string>
    <string name="device_offline">Make sure your device is connected to the internet</string>
    <string name="empty_search">Search text can not be empty</string>
    <string name="filter">Filter</string>
    <string name="search">Search</string>
    <string name="misc">Misc</string>
    <string name="error_429">Too many network requests</string>
    <string name="toggle_list_and_grid">Toggle list and grid</string>
    <string name="home">Home</string>
    <string name="financial">Financial</string>
    <string name="technology">Technology</string>
    <string name="foreign">Foreign</string>
    <string name="politics">Politics</string>
    <string name="art">Art</string>
    <string name="fashion_and_Style">Fashion &amp; Style</string>
    <string name="sports">Sports</string>
    <string name="education">Education</string>
    <string name="health">Health</string>
    <string name="no_results">No more results found</string>
    <string name="save">Save</string>
    <string-array name="sortOrder">
        <item>Newest</item>
        <item>Oldest</item>
    </string-array>
</resources>
