<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:padding="8dp"
        tools:context="com.example.android.newsapp.Fragment.FilterFragment">

        <CheckBox
            android:id="@+id/checkbox_art"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/art" />

        <CheckBox
            android:id="@+id/checkbox_fashion_and_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkbox_art"
            android:text="@string/fashion" />

        <CheckBox
            android:id="@+id/checkbox_sports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkbox_fashion_and_style"
            android:text="@string/sports" />

        <CheckBox
            android:id="@+id/checkbox_health"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkbox_sports"
            android:text="@string/health" />

        <CheckBox
            android:id="@+id/checkbox_education"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkbox_health"
            android:text="@string/education" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkbox_education"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimary"
            android:text="@string/save"
            android:textColor="@color/primaryTextColor" />
    </RelativeLayout>

</layout>
