<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_filter_list_white_48px"
        android:orderInCategory="100"
        android:title="@string/filter"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_48px"
        android:orderInCategory="5"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always|collapseActionView"
        />

    <item
        android:id="@+id/action_list"
        android:icon="@drawable/ic_list_white_48px"
        android:orderInCategory="6"
        android:title="@string/toggle_list_and_grid"
        app:showAsAction="always"/>
</menu>